<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.fragments.FragmentLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- LOGO
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_gift_rojo01"
            android:scaleX=".6"
            android:scaleY=".6"
            android:layout_marginTop="-280dp"
            android:layout_marginBottom="-280dp"
            android:transitionName="logo_transicion"
            tools:ignore="ContentDescription" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/SLogin01"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#c42217"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/HintLogin01"
                app:boxStrokeColor="#1b4a56"
                app:hintTextColor="#1b4a56">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/HintLogin02"
                app:boxStrokeColor="#1b4a56"
                app:hintTextColor="#1b4a56"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/btnLogin01"
                android:textSize="15sp"
                app:backgroundTint="#6750A4"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="#6750A4"
                android:text="@string/btnLogin02"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>